--- a/Cys - Store/App.config
+++ b/Cys - Store/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Cys___Store.Properties.Settings.sysConnectionString"
+            connectionString="server=localhost;user id=root;database=sys"
+            providerName="MySql.Data.MySqlClient" />
+        <add name="Cys___Store.Properties.Settings.sysConnectionString1"
+            connectionString="server=localhost;user id=root;persistsecurityinfo=True;database=sys"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
